--- a/timeline.html
+++ b/timeline.html
@@ -29,150 +29,80 @@
         <dl class="navLinks">
         </dl>
         <div id="percent">
-            <li>Peoria</li>
-            <li>Chicago</li>
-            <li>Buffalo</li>
-            <li>Niagara Falls</li>
-            <li>Busan</li>
-            <li>Military</li>
-            <li>3i(IT Company)</li>
-            <li>Korea</li>
-         </div>
-        <script>
-            const percentLabel = document.querySelectorAll("#percent > li");
-            $(window).on('scroll', function () {
-                var s = $(window).scrollTop(),
-                    d = $(document).height(),
-                    c = $(window).height();
-                var scrollPercent = (s / (d - c)) * 100;
-                scrollPercent.toFixed(2);
-                switch(true){
-                    case (scrollPercent < 1.67): {
-                        percentLabel[0].style.color = "#ccc";
-                        percentLabel[1].style.color = 'rgba(255, 255, 255, 0.2)';
-                        break;
-                    }
-
-                    case (scrollPercent < 11): {
-                        percentLabel[0].style.color = 'rgba(255, 255, 255, 0.2)';
-                        percentLabel[1].style.color = "#ccc";
-                        percentLabel[2].style.color = 'rgba(255, 255, 255, 0.2)';
-
-                        // i++;
-                        // j++;
-                        break;
-                    }
-                    case (scrollPercent < 34): {
-                        percentLabel[1].style.color = 'rgba(255, 255, 255, 0.2)';
-                        percentLabel[2].style.color = "#ccc";
-                        percentLabel[3].style.color = 'rgba(255, 255, 255, 0.2)';
-
-                        break;
-                    }
-                    case (scrollPercent < 48): {
-                        percentLabel[2].style.color = 'rgba(255, 255, 255, 0.2)';
-                        percentLabel[3].style.color = "#ccc";
-                        percentLabel[4].style.color = 'rgba(255, 255, 255, 0.2)';
-
-                        // i++;j++;                        
-                        break;
-                    }
-                    case (scrollPercent < 63): {
-                        percentLabel[3].style.color = 'rgba(255, 255, 255, 0.2)';
-                        percentLabel[4].style.color = "#ccc";
-                        percentLabel[5].style.color = 'rgba(255, 255, 255, 0.2)';
-
-                        // i++;j++;                        
-                        break;
-                    }
-                    case (scrollPercent < 72): {
-                        percentLabel[4].style.color = 'rgba(255, 255, 255, 0.2)';
-                        percentLabel[5].style.color = "#ccc";
-                        percentLabel[6].style.color = 'rgba(255, 255, 255, 0.2)';
-                        // i++;j++;                       
-                        break;
-                    }
-                    case (scrollPercent < 95): {
-                        percentLabel[5].style.color = 'rgba(255, 255, 255, 0.2)';
-                        percentLabel[6].style.color = "#ccc";
-                        percentLabel[7].style.color = 'rgba(255, 255, 255, 0.2)';
-
-                        // i++;j++;                        
-                        break;
-                    }
-                    case (scrollPercent < 100): {
-                        percentLabel[6].style.color = 'rgba(255, 255, 255, 0.2)';
-                        percentLabel[7].style.color = "#ccc";
-                        // i++;j++;                        
-                        break;
-                    }
-                    default: {
-                        break;
-                    }
-                }
-
-            })
+            <li><a href="#peoria">Peoria</a></li>
+            <li><a href="#chicago">Chicago</a></li>
+            <li><a href="#buffalo">Buffalo</a></li>
+            <li><a href="#niagara">Niagara Falls</a></li>
+            <li><a href="#busan">Busan</a></li>
+            <li><a href="#military">Military</a></li>
+            <li><a href="#3i">3i(IT Company)</a></li>
+            <li><a href="#korea">Korea</a></li>
+        </div>
+        <script src = "assets/js/scrollPercent.js">
         </script>
         <div id="timeline">
             <span id=column>
-                <figure class="gallery__item">
+                <figure class="gallery__item" id = "timeline_items">
                     <div class="spinner" style="display:flex">
-                        <img src="assets/images/timeline/peoria.jpeg" class="photo" onload="removeLoader(src)">
+                        <img id="peoria" src="assets/images/timeline/peoria.jpeg" class="photo"
+                            onload="removeLoader(src)">
                     </div>
                     <figcaption><span class="timeline"> August, 2016 ~ May, 2018</span><br><br><span>Peoria</span> is
                         where I started studying in the States. I went to a community college here. My plan was save
                         money at community college, and transfer to another school after 2 years.
                     </figcaption>
                 </figure>
-                <figure class="gallery__item">
+                <figure class="gallery__item" id = "timeline_items">
                     <div class="spinner" style="display:flex">
-                        <img src="assets/images/timeline/chicago.jpeg" class="photo" onload="removeLoader(src)">
+                        <img id="chicago" src="assets/images/timeline/chicago.jpeg" class="photo"
+                            onload="removeLoader(src)">
                     </div>
                     <figcaption>My first school was located nearby <span>Chicago</span>, so it was where me and my
                         friends went to hang out.
                     </figcaption>
                 </figure>
-                <figure class="gallery__item">
+                <figure class="gallery__item" id = "timeline_items">
                     <div class="spinner" style="display:flex">
-                        <img src="assets/images/timeline/buffalo.jpeg" class="photo" onload="removeLoader(src)">
+                        <img id="buffalo" src="assets/images/timeline/buffalo.jpeg" class="photo"
+                            onload="removeLoader(src)">
                     </div>
                     <figcaption><span class="timeline">August, 2018 ~ May, 2019</span> <br><br> After 2 years at
                         <span>Peoria</span>, I got accepted and transfered to SUNY, Buffalo.
                     </figcaption>
                 </figure>
-                <figure class="gallery__item">
+                <figure class="gallery__item" id = "timeline_items">
                     <div class="spinner" style="display:flex">
-                        <img src="assets/images/timeline/niagara.jpeg" class="photo" onload="removeLoader(src)">
+                        <img id="niagara" src="assets/images/timeline/niagara.jpeg" class="photo"
+                            onload="removeLoader(src)">
                     </div>
                     <figcaption>The school was located nearby <span>Niagara Falls</span>. It gave me an inner peace when
                         listening to the sound of water falling. It became me and my friends' go to place during exam
                         period.
                     </figcaption>
                 </figure>
-                <figure class="gallery__item">
+                <figure class="gallery__item" id = "timeline_items">
                     <div class="spinner" style="display:flex">
-                        <img src="assets/images/timeline/busan.jpeg" class="photo" onload="removeLoader(src)">
+                        <img id="busan" src="assets/images/timeline/busan.jpeg" class="photo"
+                            onload="removeLoader(src)">
                     </div>
                     <figcaption><span class="timeline">May, 2019 ~ June, 2019</span><br><br> After finishing one
                         academic year at the new school, I came back to South Korea to finish military duty. During a
                         month, I mostly rested at home and travelled some places in South Korea. <span>Busan</span> was
                         one place I visited right before I joined the army.</figcaption>
                 </figure>
-                <figure class="gallery__item">
+                <figure class="gallery__item" id = "timeline_items">
                     <div class="spinner" style="display:flex">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/f/f0/K-9_%EC%9E%90%EC%A3%BC%ED%8F%AC_%287445556056%29_%282%29.jpg"
+                        <img id="military"
+                            src="https://upload.wikimedia.org/wikipedia/commons/f/f0/K-9_%EC%9E%90%EC%A3%BC%ED%8F%AC_%287445556056%29_%282%29.jpg"
                             class="photo" onload="removeLoader(src)">
                     </div>
                     <!-- source: wikipedia -->
                     <figcaption><span class="timeline">June, 2019 ~ January, 2021</span><br><br>I served in a Battalion
                         that has K9 Thunder. My role there was to drive k9 Thunder.</figcaption>
                 </figure>
-                <figure class="gallery__item">
+                <figure class="gallery__item"  id = "timeline_items">
                     <div class="spinner" style="display:flex">
-                        <img src="assets/images/timeline/jeju.jpeg" class="photo" onload="removeLoader(src)">
-                    </div>
-                    <div class="spinner" style="display:flex">
-                        <img src="assets/images/timeline/jeju2.jpeg" class="photo" onload="removeLoader(src)">
+                        <img id = "3i" src="assets/images/timeline/jeju2.jpeg" class="photo" onload="removeLoader(src)">
                     </div>
                     <figcaption><span class="timeline">January, 2021 ~ November, 2021</span> <br><br>After finishing one
                         and a half years of military duty, I joined an IT company as a <span>QA tester(engineer)</span>.
@@ -180,9 +110,9 @@
                         I was testing to shoot 3D dollhouses of accommodations in <span>Jeju Island</span>.
                     </figcaption>
                 </figure>
-                <figure class="gallery__item">
+                <figure class="gallery__item" id = "timeline_items">
                     <div class="spinner" style="display:flex">
-                        <img src="assets/images/timeline/covid.png" class="photo" onload="removeLoader(src)">
+                        <img id="korea" src="assets/images/timeline/covid.png" class="photo" onload="removeLoader(src)">
                     </div>
                     <figcaption><span class="timeline">Dec, 2021 ~ Now</span> <br><br> After I quit the IT company I was
                         working, I wanted started to prepare visa and documents to return to school. COVID-19 status in
