--- a/timeline.html
+++ b/timeline.html
@@ -29,14 +29,14 @@
         <dl class="navLinks">
         </dl>
         <div id="percent">
-            <li><a href="#peoria">Peoria</a></li>
-            <li><a href="#chicago">Chicago</a></li>
-            <li><a href="#buffalo">Buffalo</a></li>
-            <li><a href="#niagara">Niagara Falls</a></li>
-            <li><a href="#busan">Busan</a></li>
-            <li><a href="#military">Military</a></li>
-            <li><a href="#3i">3i(IT Company)</a></li>
-            <li><a href="#korea">Korea</a></li>
+            <li><a href="#peoria">Aug, 2016</a></li>
+            <li><a href="#chicago">May, 2018</a></li>
+            <li><a href="#buffalo">Aug, 2018</a></li>
+            <li><a href="#niagara">May, 2019</a></li>
+            <li><a href="#busan">June, 2019</a></li>
+            <li><a href="#military">Jan, 2021</a></li>
+            <li><a href="#3i">Nov, 2021</a></li>
+            <li><a href="#korea">Dec, 2021 ~</a></li>
         </div>
         <script src = "assets/js/scrollPercent.js">
         </script>
