added sieve of eratosthenes

--- a/algorithm.html
+++ b/algorithm.html
@@ -50,7 +50,19 @@
                     of the child nodes that were encountered but not yet explored. It is usually a better option when
                     target is closer to source.<br> <span>Time complexity: O(V+E)</span></figcaption>
             </figure>
-        </ul>
+            </ul>
+            <ul>
+                <figure class="gallery__item">
+                    <div class="spinner" style="display:flex">
+                        <img src="assets/images/studies/algorithm/sieve.png" class="photo" onload="removeLoader(src)">
+                    </div>
+                    <figcaption><span>Sieve of Eratosthenes</span><br> is a method used to find all the prime numbers up to a limit number(N).
+                        It adds all the numbers in a range as a prime number. Starting from smallest prime number, 2, it removes multiple of each prime number(i).
+                        When i reaches sqrt(N) or bigger, all the numbers remaining are defined as prime number.
+                        <br> <span>Time complexity: O(N log (log N))</span></figcaption>
+                </figure>
+            </ul>
+
         </div>
     </div>
     <div class="footer-dark">
