--- a/assets/html/navBar.html
+++ b/assets/html/navBar.html
@@ -2,34 +2,34 @@
 <li><a href="https://www.linkedin.com/in/james-oh-b41a82215/" target="_black">Profile</a></li>
 <!-- <li><a href="profile.html"> Profile</a></li> -->
 <!-- <li><a href="photos.html"> Photos</a></li> -->
-<li><a href="photos.html"> Photos</a>
+<li><a href="photos"> Photos</a>
     <ul>
-        <li><a href="rashi.html">Rashi</a></li>
+        <li><a href="rashi">Rashi</a></li>
     </ul>
     <ul>
-        <li><a href="timeline.html">Timeline</a></li>
-    </ul>
-</li>
-<li><a href="applications.html">Applications</a>
-    <ul>
-        <li><a href="tetris.html"> Tetris</a></li>
-    </ul>
-    <ul>
-        <li><a href="dogScanner.html"> Dog Scanner</a></li>
-    </ul>
-    <ul>
-        <li><a href="connect4.html">Connect4</a></li>
+        <li><a href="timeline">Timeline</a></li>
     </ul>
 </li>
-<li><a href="studies.html">Studies</a>
+<li><a href="applications">Applications</a>
     <ul>
-        <li><a href="algorithm.html"> Algorithm</a></li>
+        <li><a href="tetris"> Tetris</a></li>
     </ul>
     <ul>
-        <li><a href="ml.html">ML/DL</a></li>
+        <li><a href="dogScanner"> Dog Scanner</a></li>
     </ul>
     <ul>
-        <li><a href="dog_model.html">Dog Model</a></li>
+        <li><a href="connect4">Connect4</a></li>
+    </ul>
+</li>
+<li><a href="studies">Studies</a>
+    <ul>
+        <li><a href="algorithm"> Algorithm</a></li>
+    </ul>
+    <ul>
+        <li><a href="ml">ML/DL</a></li>
+    </ul>
+    <ul>
+        <li><a href="dog_model">Dog Model</a></li>
     </ul>
 </li>
 <div class="burger">
