--- a/algorithm.html
+++ b/algorithm.html
@@ -33,7 +33,7 @@
                 <div class="spinner" style="display:flex">
                     <img src="assets/images/studies/algorithm/DFS.png" class="photo" onload="removeLoader(src)">
                 </div>
-                <figcaption><span>Depth-first search (DFS)</span><br> DFS is an algorithm for traversing a tree. It starts
+                <figcaption><span>Depth-first search (DFS)</span><br> is an algorithm for traversing a tree. It starts
                     traversing from the root node and explores as far as possible along each branch before backtracking.
                     Usually uses <span>stack</span> to find the shortest path. In general, DFS is faster than
                     BFS.<br><span>Time complexity: </span> O(V+E)</figcaption>
@@ -44,7 +44,7 @@
                 <div class="spinner" style="display:flex">
                     <img src="assets/images/studies/algorithm/BFS.png" class="photo" onload="removeLoader(src)">
                 </div>
-                <figcaption><span>Breadth-first search (BFS)</span><br> BFS is an algorithm for searching a tree. It starts
+                <figcaption><span>Breadth-first search (BFS)</span><br> is an algorithm for searching a tree. It starts
                     traversing from the root node and explores all nodes at the present depth prior to moving on to the
                     nodes at the next depth level. Extra memory, usually a <span>queue</span>, is needed to keep track
                     of the child nodes that were encountered but not yet explored. It is usually a better option when
@@ -62,7 +62,24 @@
                         <br> <span>Time complexity: O(N log (log N))</span></figcaption>
                 </figure>
             </ul>
-
+            <ul>
+                <figure class="gallery__item">
+                    <div class="spinner" style="display:flex">
+                        <!-- <img src="assets/images/studies/algorithm/sieve.png" class="photo" onload="removeLoader(src)"> -->
+                    </div>
+                    <figcaption><span>Brute-force search</span><br> is a problem-solving technique that enumerates all the possible candidates for the solution. It checks each candidate if it satisfies problem's requirements.
+                        In general, Brute-force is easy to implement, but becomes inefficient as the number of possible candidates increases
+                        <br> <span>Time complexity: O(mn)</span></figcaption>
+                </figure>
+            </ul>
+            <ul>
+                <figure class="gallery__item">
+                    <div class="spinner" style="display:flex">
+                        <img src="assets/images/studies/algorithm/backtracking.png" class="photo" onload="removeLoader(src)">
+                    </div>
+                    <figcaption><span>Backtracking algorithm</span><br> is a problem-solving algorithm that recursively goes through candidates and returns to initial position if the candidate do not satisfy the condition.</figcaption>
+                </figure>
+            </ul>
         </div>
     </div>
     <div class="footer-dark">
