added bruteforce example

--- a/algorithm.html
+++ b/algorithm.html
@@ -65,7 +65,7 @@
             <ul>
                 <figure class="gallery__item">
                     <div class="spinner" style="display:flex">
-                        <!-- <img src="assets/images/studies/algorithm/sieve.png" class="photo" onload="removeLoader(src)"> -->
+                        <img src="assets/images/studies/algorithm/bruteforce.png" class="photo" onload="removeLoader(src)">
                     </div>
                     <figcaption><span>Brute-force search</span><br> is a problem-solving technique that enumerates all the possible candidates for the solution. It checks each candidate if it satisfies problem's requirements.
                         In general, Brute-force is easy to implement, but becomes inefficient as the number of possible candidates increases
