modified index page

--- a/algorithm.html
+++ b/algorithm.html
@@ -22,7 +22,10 @@
 </head>
 
 <body class=main>
-    <h1>Algorithm Studies
+    <h1 id = "title">
+        <a href="index">
+        Algorithm Studies
+        </a>
     </h1>
     <dl class="navLinks">
     </dl>
