--- a/applications.html
+++ b/applications.html
@@ -19,7 +19,10 @@
 </head>
 
 <body>
-    <h1>Applications
+    <h1 id = "title">
+        <a href="index">
+        Applications
+        </a>
     </h1>
         <!-- <img id="logo" src="images/logo/camera.png" style="filter: invert();"> -->
     <dl class="navLinks">
