--- a/connect4.html
+++ b/connect4.html
@@ -19,7 +19,10 @@
     </script>
     <div id="header"></div>
 </head>
-<h1 class="title">Connect4 Game
+<h1 id="title">
+    <a href="index">
+    Connect4 Game
+    </a>
 </h1>
 <dl class="navLinks">
 </dl>
