--- a/dogScanner.html
+++ b/dogScanner.html
@@ -18,8 +18,9 @@
         </script>
         <div id="header"></div>
     </head>
-    <h1>Dog Scanner
+    <h1 id = "title"> <a href="index">Dog Scanner
         <img id="logo" src="assets/images/logo/magnifying_glass.png" style="filter:invert()">
+    </a>
     </h1>
     <dl class="navLinks">
     </dl>
