--- a/profile.html
+++ b/profile.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    <h1>My Profile
+    <h1 id = "title"><a href="index">My Profile</a>
     </h1>
     <dl class="navLinks">
     </dl>
