--- a/rashi.html
+++ b/rashi.html
@@ -11,6 +11,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.js"
         integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous">
         </script>
+
     <script>
         $(function () {
             $(".footer-dark").load("assets/html/footer.html")
@@ -23,9 +24,9 @@
 
 <body>
     <div class=main>
-        <h1>
+        <h1 id = "title"><a href="index">
             Rashi
-            <!-- <img id="logo" src="assets/images/logo/paw.png" style="filter: invert();"> -->
+        </a>
         </h1>
         <dl class="navLinks">
         </dl>
