--- a/photos.html
+++ b/photos.html
@@ -19,8 +19,7 @@
 </head>
 
 <body>
-    <h1>Photos
-        <!-- <img id="logo" src="assets/images/logo/camera.png" style="filter: invert();"> -->
+    <h1 id = "title"><a href="index">Photos</a>
     </h1>
     <dl class="navLinks">
     </dl>
