--- a/tetris.html
+++ b/tetris.html
@@ -24,9 +24,9 @@
         </script>
         <div id="header"></div>
     </head>
-    <h1 >Tetris
+    <h1 id = "title"><a href="index">Tetris
         <img id="logo" src="assets/images/logo/game.png">
-        
+        </a>
     </h1>
     <dl class="navLinks">
     </dl>
