--- a/timeline.html
+++ b/timeline.html
@@ -23,9 +23,9 @@
 
 <body>
     <div class=main>
-        <h1>Photo Timeline
-            <!-- <img id="logo" src="assets/images/logo/scenery.png"> -->
-        </h1>
+        <h1 id = "title"><a href="index">
+            Photo Timeline
+        </a>
         <dl class="navLinks">
         </dl>
         <div id="percent">
