added preview image for dog scanner

--- a/dogScanner.html
+++ b/dogScanner.html
@@ -36,12 +36,17 @@
                     <input id="input-file" type="file" onchange="preview_image(event)">
                 </button>
             </div>
+            
             <div class="spinner"></div>
             <div id="webcam-container"></div>
             <div id="label-container"></div>
             <img id="output_image">
+            <img id="dog">
+            <div id="breed_data">
+                <table id="breed_data_table">
+                </table>
+              </div>
             <br>
-
             <br><br><br>
             <button type="button" class="collapsible">List of the Dogs trained</button>
             <div class="content">
