added meta tag for google search

--- a/dogScanner.html
+++ b/dogScanner.html
@@ -17,6 +17,7 @@
             });
         </script>
         <div id="header"></div>
+        <meta name="google-site-verification" content="4YzxwKwyJMuTUU6hf9MWmRLNVDZwcL1uYklqBdQWo2s" />
     </head>
     <h1 id = "title"> <a href="index">Dog Scanner
             <img id="logo" src="assets/images/logo/magnifying_glass.png" style="filter:invert()">
