--- a/tetris.html
+++ b/tetris.html
@@ -36,6 +36,7 @@
             </div>
             <div>
                 <span class="game-text">Game-Over!!</span>
+                <span class="combo"></span>
                 <button class="game-button">restart
                 </button>
                 <button class="resume-button">Resume</button>
