--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type = "image/x-icon" href = "favicon.ico"> 
     <link href="assets/css/style.css" rel="stylesheet">
     <script src="assets/js/highlightSelected.js"></script>
-    <script src="assets/js/currency.js"></script>
+    <!-- <script src="assets/js/currency.js"></script> -->
     <script src="https://code.jquery.com/jquery-3.3.1.js"
         integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous">
         </script>
@@ -25,12 +25,12 @@
 </dl>
 
 <body>
-    <div id=grid>
+    <!-- <div id=grid>
         <p id = krw></p>
         <p id = cny></p>
         <p id = jpy></p>
         <p id = currency></p>
-    </div>
+    </div> -->
     <div class= "footer-dark"></div>
     
 </body>
