--- a/timeline.html
+++ b/timeline.html
@@ -36,7 +36,8 @@
             <li><a href="#busan">June, 2019</a></li>
             <li><a href="#military">Jan, 2021</a></li>
             <li><a href="#3i">Nov, 2021</a></li>
-            <li><a href="#korea">Dec, 2021 ~</a></li>
+            <li><a href="#korea">Dec, 2021</a></li>
+            <li><a href="#ub">Aug,2022</a></li>
         </div>
         <script src = "assets/js/scrollPercent.js">
         </script>
@@ -114,10 +115,18 @@
                     <div class="spinner" style="display:flex">
                         <img id="korea" src="assets/images/timeline/covid.png" class="photo" onload="removeLoader(src)">
                     </div>
-                    <figcaption><span class="timeline">Dec, 2021 ~ Now</span> <br><br> After I quit the IT company I was
+                    <figcaption><span class="timeline">Dec, 2021 ~ Aug, 2022</span> <br><br> After I quit the IT company I was
                         working, I wanted started to prepare visa and documents to return to school. COVID-19 status in
                         the States was really bad at the time, and I wanted to take courses in person. I decided to take
                         another semester off and do personal projects.
+                    </figcaption>
+                </figure>
+                <figure class="gallery__item" id = "timeline_items">
+                    <div class="spinner" style="display:flex">
+                        <img id="ub" src="https://arts-sciences.buffalo.edu/etc/designs/ubcms/clientlibs-main/images/ub-social.png.img.512.auto.png/1615975619499.png" class="photo" onload="removeLoader(src)">
+                    </div>
+                    <figcaption><span class="timeline">Aug, 2022 ~ Now</span> <br><br> I came back to UB to pursue my degree. 
+                        I am taking more CSE courses including ML, and looking for internships involving machine learning.
                     </figcaption>
                 </figure>
             </span>
