added reinforcement learning

--- a/ml.html
+++ b/ml.html
@@ -46,7 +46,28 @@
                     Deep Learning is a subcategory of Machine Learning, and it uses multiple layers to get the output. DL is used to process semi-strucutred data such as images, videos, voice or texts.
                 </figcaption>
             </figure>
-        </ul>
+            </ul>
+            <ul>
+                <figure class="gallery__item">
+                    <div class="spinner" style="display:flex">
+                    <img src="assets/images/studies/ml/rl.png" onload="removeLoader(src)"class="photo">
+                    </div>
+                    <figcaption><span>Reinforcement Learning</span><br>Learn to make a good sequence of Learning. It uses Markov Decision Process to make a new decision.
+                    </figcaption>
+                </figure>
+            </ul>
+            <ul>
+                <figure class="gallery__item">
+                    <div class="spinner" style="display:flex">
+                    <img src="https://en.wikipedia.org/wiki/File:Markov_Decision_Process.svg" onload="removeLoader(src)"class="photo">
+                    </div>
+                    <figcaption><span>MarKov Decision Process</span><br>Decision making process that involves 4 variables. \n S: Set of State, characterizes the configuration of the environment
+                        \n S: Set of actions, A_s = set of actions available from state s
+                        \n P(s, s'): is the probabilty that action a in state s at time t will lead to state s' at time t + 1
+                        \n R is the immediate reward that is rewarded right after transition of a state from s to s'.
+                    </figcaption>
+                </figure>
+            </ul>
         </div>
     </div>
     <div class="footer-dark">
