now title is aritificial intelligence

--- a/ml.html
+++ b/ml.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>ML/DL</title>
+    <title>AI</title>
     <script src="assets/js/highlightSelected.js"></script>
     <link href="assets/css/style.css" rel="stylesheet">
     <script src = "assets/js/loader.js"></script>
@@ -22,7 +22,7 @@
 </head>
 
 <body class=main>
-    <h1 id = "title"><a href="index">ML/DL Studies</a>
+    <h1 id = "title"><a href="index">AI Studies</a>
     </h1>
     <dl class="navLinks">
     </dl>
