--- a/ml.html
+++ b/ml.html
@@ -59,7 +59,7 @@
             <ul>
                 <figure class="gallery__item">
                     <div class="spinner" style="display:flex">
-                    <img src="https://en.wikipedia.org/wiki/File:Markov_Decision_Process.svg" onload="removeLoader(src)"class="photo">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ad/Markov_Decision_Process.svg/1500px-Markov_Decision_Process.svg.png" onload="removeLoader(src)"class="photo">
                     </div>
                     <figcaption><span>MarKov Decision Process</span><br>Decision making process that involves 4 variables. \n S: Set of State, characterizes the configuration of the environment
                         \n S: Set of actions, A_s = set of actions available from state s
