--- a/ml.html
+++ b/ml.html
@@ -59,12 +59,12 @@
             <ul>
                 <figure class="gallery__item">
                     <div class="spinner" style="display:flex">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ad/Markov_Decision_Process.svg/1500px-Markov_Decision_Process.svg.png" onload="removeLoader(src)"class="photo">
+                    <img src="assets/images/studies/ml/mdp.png" onload="removeLoader(src)"class="photo">
                     </div>
                     <figcaption><span>MarKov Decision Process</span><br>Decision making process that involves 4 variables. \n S: Set of State, characterizes the configuration of the environment
-                        \n S: Set of actions, A_s = set of actions available from state s
-                        \n P(s, s'): is the probabilty that action a in state s at time t will lead to state s' at time t + 1
-                        \n R is the immediate reward that is rewarded right after transition of a state from s to s'.
+                        <br>S: Set of actions, A_s = set of actions available from state s
+                        <br>P(s, s'): is the probabilty that action a in state s at time t will lead to state s' at time t + 1
+                        <br>R is the immediate reward that is rewarded right after transition of a state from s to s'.
                     </figcaption>
                 </figure>
             </ul>
