--- a/ml.html
+++ b/ml.html
@@ -61,10 +61,11 @@
                     <div class="spinner" style="display:flex">
                     <img src="assets/images/studies/ml/mdp.png" onload="removeLoader(src)"class="photo">
                     </div>
-                    <figcaption><span>MarKov Decision Process</span><br>Decision making process that involves 4 variables. \n S: Set of State, characterizes the configuration of the environment
-                        <br>S: Set of actions, A_s = set of actions available from state s
+                    <figcaption><span>MarKov Decision Process</span><br>Decision making process that involves 4 variables. 
+                        <br>S: Set of State, characterizes the configuration of the environment
+                        <br>A_s: set of actions available from state s
                         <br>P(s, s'): is the probabilty that action a in state s at time t will lead to state s' at time t + 1
-                        <br>R is the immediate reward that is rewarded right after transition of a state from s to s'.
+                        <br>R_s is the immediate reward that is rewarded right after transition of a state from s to s'.
                     </figcaption>
                 </figure>
             </ul>
