added some texts

--- a/ml.html
+++ b/ml.html
@@ -52,7 +52,7 @@
                     <div class="spinner" style="display:flex">
                     <img src="assets/images/studies/ml/rl.png" onload="removeLoader(src)"class="photo">
                     </div>
-                    <figcaption><span>Reinforcement Learning</span><br>Learn to make a good sequence of Learning. It uses Markov Decision Process to make a new decision.
+                    <figcaption><span>Reinforcement Learning</span><br>Learn to make a good sequence of Learning. It uses Markov Decision Process to make a new decision. RL is used to solve a multi-level problem using trial and error.
                     </figcaption>
                 </figure>
             </ul>
