implementing profile page

--- a/profile.html
+++ b/profile.html
@@ -19,8 +19,8 @@
 </head>
 
 <body>
-    <h1 id = "title"><a href="index">My Profile</a>
-    </h1>
+    <!-- <h1 id = "title"><a href="index">My Profile</a> -->
+    <!-- </h1> -->
     <dl class="navLinks">
     </dl>
     <div id="nameBox">
