--- a/applications.html
+++ b/applications.html
@@ -20,7 +20,7 @@
 
 <body>
     <h1 id = "title">
-        <a href="index">
+        <a href="profile">
         Applications
         </a>
     </h1>
