--- a/connect4.html
+++ b/connect4.html
@@ -20,7 +20,7 @@
     <div id="header"></div>
 </head>
 <h1 id="title">
-    <a href="index">
+    <a href="profile">
     Connect4 Game
     </a>
 </h1>
