--- a/dogScanner.html
+++ b/dogScanner.html
@@ -19,7 +19,7 @@
         <div id="header"></div>
         <meta name="google-site-verification" content="4YzxwKwyJMuTUU6hf9MWmRLNVDZwcL1uYklqBdQWo2s" />
     </head>
-    <h1 id = "title"> <a href="index">Dog Scanner
+    <h1 id = "title"> <a href="profile">Dog Scanner
             <img id="logo" src="assets/images/logo/magnifying_glass.png" style="filter:invert()">
         </a>
     </h1>
