--- a/dog_model.html
+++ b/dog_model.html
@@ -21,7 +21,7 @@
 </head>
 
 <body class=main >
-    <h1 id = "title"><a href="index">Dog Model Using TF
+    <h1 id = "title"><a href="profile">Dog Model Using TF
     </a>
     </h1>
     <dl class="navLinks">
