--- a/photos.html
+++ b/photos.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    <h1 id = "title"><a href="index">Photos</a>
+    <h1 id = "title"><a href="profile">Photos</a>
     </h1>
     <dl class="navLinks">
     </dl>
