--- a/profile.html
+++ b/profile.html
@@ -23,8 +23,8 @@
     <dl class="navLinks">
     </dl>
     <div id="nameBox">
-        <p id="name">
-            Jinsang Oh
+        <p id="namedescription">
+            Hi I'm </p><p id = "name"style="color:rgb(255,225,0)">Jinsang Oh</p> <p id="namedescription">An Enthusiastic and self-motivated team player
         </p>
     </div>
     <div id=profile>
