--- a/studies.html
+++ b/studies.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    <h1 id = "title"><a href="index">Studies</a>
+    <h1 id = "title"><a href="profile">Studies</a>
     </h1>
     <dl class="navLinks">
     </dl>
