--- a/tetris.html
+++ b/tetris.html
@@ -24,7 +24,7 @@
         </script>
         <div id="header"></div>
     </head>
-    <h1 id = "title"><a href="index">Tetris
+    <h1 id = "title"><a href="profile">Tetris
         <img id="logo" src="assets/images/logo/game.png">
         </a>
     </h1>
