--- a/timeline.html
+++ b/timeline.html
@@ -51,7 +51,7 @@
 
 <body>
     <div class=main>
-        <h1 id = "title"><a href="index">
+        <h1 id = "title"><a href="profile">
             Photo Timeline
         </a>
         <dl class="navLinks">
