--- a/algorithm.html
+++ b/algorithm.html
@@ -23,7 +23,7 @@
 
 <body class=main>
     <h1 id = "title">
-        <a href="index">
+        <a href="profile">
         Algorithm Studies
         </a>
     </h1>
