--- a/ml.html
+++ b/ml.html
@@ -22,7 +22,7 @@
 </head>
 
 <body class=main>
-    <h1 id = "title"><a href="index">AI Studies</a>
+    <h1 id = "title"><a href="profile">AI Studies</a>
     </h1>
     <dl class="navLinks">
     </dl>
