--- a/rashi.html
+++ b/rashi.html
@@ -24,7 +24,7 @@
 
 <body>
     <div class=main>
-        <h1 id = "title"><a href="index">
+        <h1 id = "title"><a href="profile">
             Rashi
         </a>
         </h1>
