added more contents

--- a/algorithm.html
+++ b/algorithm.html
@@ -83,6 +83,38 @@
                     <figcaption><span>Backtracking algorithm</span><br> is a problem-solving algorithm that recursively goes through candidates and returns to initial position if the candidate do not satisfy the condition.</figcaption>
                 </figure>
             </ul>
+            <ul>
+                <figure class="gallery__item">
+                    <div class="spinner" style="display:flex">
+                        <img src="assets/images/studies/algorithm/dj.png" class="photo" onload="removeLoader(src)">
+                    </div>
+                    <figcaption><span>Dijkstra's Algorithm</span><br> is a graph search algorithm that solves the single-source shortest path problem. It works by visiting the unvisited node with the lowest path cost and updating path costs of its neighbors. It works for both directed and undirected graphs with non-negative edge weights.<br><span>Time complexity: </span> O(V^2) or O(V + E log V)</figcaption>
+                </figure>
+            </ul>
+            <ul>
+                <figure class="gallery__item">
+                    <div class="spinner" style="display:flex">
+                        <img src="assets/images/studies/algorithm/binary.png" class="photo" onload="removeLoader(src)">
+                    </div>
+                    <figcaption><span>Binary Search</span><br> is a search algorithm that finds the position of a target value within a sorted array. It compares the middle element of the array with the target value and narrows down the search range by half until the target value is found or the range is empty.<br><span>Time complexity: </span> O(log N)</figcaption>
+                </figure>
+            </ul>
+            <ul>
+                <figure class="gallery__item">
+                    <div class="spinner" style="display:flex">
+                        <img src="assets/images/studies/algorithm/merge.png" class="photo" onload="removeLoader(src)">
+                    </div>
+                    <figcaption><span>Merge Sort</span><br> is a divide-and-conquer sorting algorithm that works by recursively dividing the array into two halves, sorting them, and then merging the sorted halves back together. It is a stable sort and has a worst-case time complexity of O(N log N).<br><span>Time complexity: </span> O(N log N)</figcaption>
+                </figure>
+            </ul>
+            <ul>
+                <figure class="gallery__item">
+                    <div class="spinner" style="display:flex">
+                        <img src="assets/images/studies/algorithm/quick.png" class="photo" onload="removeLoader(src)">
+                    </div>
+                    <figcaption><span>Quick Sort</span><br> is a divide-and-conquer sorting algorithm that works by selecting a 'pivot' element from the array and partitioning the other elements into two groups, according to whether they are less than or greater than the pivot. The sub-arrays are then sorted recursively. In average cases, it has a time complexity of O(N log N), but it can degrade to O(N^2) in the worst case.<br><span>Time complexity: </span> O(N log N) (average), O(N^2) (worst)</figcaption>
+                </figure>
+            </ul>
         </div>
     </div>
     <div class="footer-dark">
