--- a/ml.html
+++ b/ml.html
@@ -69,6 +69,44 @@
                     </figcaption>
                 </figure>
             </ul>
+            <ul>
+                <figure class="gallery__item">
+                    <div class="spinner" style="display:flex">
+                    <img src="assets/images/studies/ml/sp_learning.png" onload="removeLoader(src)"class="photo">
+                    </div>
+                    <figcaption><span>Supervised vs. Unsupervised Learning</span><br>Supervised Learning is a type of Machine Learning where the algorithm is trained on a labeled dataset, which means the dataset contains both input features and thecorrect output labels. The algorithm learns the relationship between the input features and the output labels, and can then make predictions on new, unseen data. Classification is an example of supervised learning.
+                        Unsupervised Learning, on the other hand, deals with datasets that do not have output labels. The algorithm learns the underlying structure or patterns in the data by itself. Common tasks in unsupervised learning include clustering (grouping similar data points together) and dimensionality reduction (simplifying the dataset while preserving its main characteristics). Clustering is an example of unsupervised learning</figcaption>
+                    </figure>
+                </ul>
+                <ul>
+                    <figure class="gallery__item">
+                        <div class="spinner" style="display:flex">
+                        <img src="assets/images/studies/ml/overfit.png" onload="removeLoader(src)"class="photo">
+                        </div>
+                        <figcaption><span>Overfitting vs. Underfitting</span><br>Overfitting occurs when a model learns the training data too well, including the noise and irrelevant details. As a result, it performs poorly on new, unseen data. On the other hand, underfitting happens when a model is too simple and fails to capture the underlying patterns in the training data, leading to poor performance on both the training and test datasets. The goal in machine learning is to find a balance between overfitting and underfitting by building a model that generalizes well to new data.
+                        </figcaption>
+                    </figure>
+                </ul>
+                <ul>
+                    <figure class="gallery__item">
+                        <div class="spinner" style="display:flex">
+                        <img src="assets/images/studies/ml/cnn.png" onload="removeLoader(src)"class="photo">
+                        </div>
+                        <figcaption><span>Convolutional Neural Networks (CNNs)</span><br>CNNs are a type of deep learning architecture specifically designed for processing grid-like data, such as images. They consist of several layers, including convolutional layers, pooling layers, and fully connected layers. Convolutional layers apply filters to the input data to detect specific features, like edges or textures. Pooling layers reduce the spatial dimensions of the data, making the model more computationally efficient. Fully connected layers connect every neuron in one layer to every neuron in the next layer, allowing the model to make predictions based on the learned features.
+                        </figcaption>
+                    </figure>
+                </ul>
+                <ul>
+                    <figure class="gallery__item">
+                        <div class="spinner" style="display:flex">
+                        <img src="assets/images/studies/ml/rnn.png" onload="removeLoader(src)"class="photo">
+                        </div>
+                        <figcaption><span>Recurrent Neural Networks (RNNs)</span><br>RNNs are a type of neural network architecture designed for processing sequences of data, such as time series or natural language. RNNs have a unique structure that allows them to maintain a hidden state, which can capture information from previous time steps. This enables RNNs to learn patterns and dependencies in sequences of data, making them suitable for tasks like language translation, speech recognition, and time series prediction.
+                        </figcaption>
+                    </figure>
+                </ul>
+                    </div>
+                </div>
         </div>
     </div>
     <div class="footer-dark">
