--- a/timeline.html
+++ b/timeline.html
@@ -63,7 +63,7 @@
             <li><a href="#niagara">May, 2019</a></li>
             <li><a href="#busan">June, 2019</a></li>
             <li><a href="#military">Jan, 2021</a></li>
-            <li><a href="#3i">Nov, 2021</a></li>
+            <li><a href="#threei">Nov, 2021</a></li>
             <li><a href="#korea">Dec, 2021</a></li>
             <li><a href="#ub">Aug,2022</a></li>
         </div>
@@ -131,7 +131,7 @@
                 </figure>
                 <figure class="gallery__item"  id = "timeline_items">
                     <div class="spinner" style="display:flex">
-                        <img id = "3i" src="assets/images/timeline/jeju2.jpeg" class="photo" onload="removeLoader(src)">
+                        <img id="threei" src="assets/images/timeline/jeju2.jpeg" class="photo" onload="removeLoader(src)">
                     </div>
                     <figcaption><span class="timeline">January, 2021 ~ November, 2021</span> <br><br>After finishing one
                         and a half years of military duty, I joined an IT company as a <span>QA tester(engineer)</span>.
